--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.3",
         "darkaonline/l5-swagger": "8.1.0",
         "dingo/api": "^3.0.0",
         "encore/laravel-admin": "^1.8",
